minor design tweak requests

--- a/patternlab/source/sass/partials/components/_user-header.scss
+++ b/patternlab/source/sass/partials/components/_user-header.scss
@@ -1,4 +1,5 @@
 .user-header {
+  margin: 0 0 2.5em 0;
   .flag-outer-follow {
     float: left;
     margin-right: 0.5em;
@@ -35,7 +36,7 @@
 }
 
 .user-header__meta {
-  padding: 1em 0;
+  padding: 1em 0 1.5em 0;
 }
 
 .user-header__address {
