--- a/patternlab/source/sass/partials/components/pane/_pane--userfield-user-motto.scss
+++ b/patternlab/source/sass/partials/components/pane/_pane--userfield-user-motto.scss
@@ -6,6 +6,7 @@
     color: $lightorange;
     font-size: em(12px);
     font-weight: bold;
+    margin: 0;
     text-transform: uppercase;
   }
   .pane__content {
