--- a/patternlab/source/css/styles.css
+++ b/patternlab/source/css/styles.css
@@ -1899,7 +1899,7 @@ input.throbbing {
 }
 /* line 68, ../sass/partials/components/_cardflip.scss */
 .cardflip__a .cardflip__title {
-  min-height: 80px;
+  min-height: 60px;
 }
 /* line 71, ../sass/partials/components/_cardflip.scss */
 .cardflip__b .cardflip__title {
@@ -3645,9 +3645,10 @@ aside .pane__title {
   color: #ed7d3a;
   font-size: 0.75em;
   font-weight: bold;
+  margin: 0;
   text-transform: uppercase;
 }
-/* line 11, ../sass/partials/components/pane/_pane--userfield-user-motto.scss */
+/* line 12, ../sass/partials/components/pane/_pane--userfield-user-motto.scss */
 .pane--userfield-user-motto .pane__content {
   font-size: 1.125em;
   font-style: italic;
@@ -4198,17 +4199,21 @@ tr.drag-previous {
   display: inline-block;
 }
 
-/* line 2, ../sass/partials/components/_user-header.scss */
+/* line 1, ../sass/partials/components/_user-header.scss */
+.user-header {
+  margin: 0 0 2.5em 0;
+}
+/* line 3, ../sass/partials/components/_user-header.scss */
 .user-header .flag-outer-follow {
   float: left;
   margin-right: 0.5em;
 }
 
-/* line 8, ../sass/partials/components/_user-header.scss */
+/* line 9, ../sass/partials/components/_user-header.scss */
 .user-header__photo {
   padding-right: 1em;
 }
-/* line 10, ../sass/partials/components/_user-header.scss */
+/* line 11, ../sass/partials/components/_user-header.scss */
 .user-header__photo img {
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
@@ -4218,7 +4223,7 @@ tr.drag-previous {
   border: 2px solid #cecfcb;
 }
 
-/* line 16, ../sass/partials/components/_user-header.scss */
+/* line 17, ../sass/partials/components/_user-header.scss */
 .user-header__name {
   -webkit-hyphens: none;
   -moz-hyphens: none;
@@ -4229,34 +4234,34 @@ tr.drag-previous {
   text-transform: uppercase;
 }
 @media (min-width: 31.25em) {
-  /* line 16, ../sass/partials/components/_user-header.scss */
+  /* line 17, ../sass/partials/components/_user-header.scss */
   .user-header__name {
     font-size: 2em;
   }
 }
 
-/* line 27, ../sass/partials/components/_user-header.scss */
+/* line 28, ../sass/partials/components/_user-header.scss */
 .user-header__organization {
   font-size: 1.125em;
   font-weight: bold;
 }
 
-/* line 32, ../sass/partials/components/_user-header.scss */
+/* line 33, ../sass/partials/components/_user-header.scss */
 .user-header__title {
   font-size: 1.125em;
   font-style: italic;
 }
 
-/* line 37, ../sass/partials/components/_user-header.scss */
+/* line 38, ../sass/partials/components/_user-header.scss */
 .user-header__meta {
-  padding: 1em 0;
+  padding: 1em 0 1.5em 0;
 }
 
-/* line 41, ../sass/partials/components/_user-header.scss */
+/* line 42, ../sass/partials/components/_user-header.scss */
 .user-header__address {
   font-size: 0.875em;
 }
-/* line 43, ../sass/partials/components/_user-header.scss */
+/* line 44, ../sass/partials/components/_user-header.scss */
 .user-header__address:before {
   height: 16px;
   overflow: hidden;
@@ -4278,13 +4283,13 @@ tr.drag-previous {
   width: 0;
 }
 
-/* line 54, ../sass/partials/components/_user-header.scss */
+/* line 55, ../sass/partials/components/_user-header.scss */
 .user-header__member-since {
   font-size: 0.875em;
   line-height: 1.5;
 }
 
-/* line 59, ../sass/partials/components/_user-header.scss */
+/* line 60, ../sass/partials/components/_user-header.scss */
 .user-header__type {
   font-size: 0.875em;
   line-height: 1.5;
