--- a/patternlab/source/_patterns/03-templates/01-innovation-landing@inprogress.mustache
+++ b/patternlab/source/_patterns/03-templates/01-innovation-landing@inprogress.mustache
@@ -13,11 +13,7 @@
       </div>
       <div class="l-wrapper layout-constrain">
         <aside class="l-sidebar">
-          <div style="background: #ccc; color: #fff; font-weight: bold; text-align: center;">
-            FEELTARS<br>
-            GO<br>
-            HERE<br>
-          </div>
+          {{> molecules-filters }}
         </aside>
         <div class="l-main">
           <div class="view--card-view">
