--- a/patternlab/source/sass/partials/components/_region-navigation.scss
+++ b/patternlab/source/sass/partials/components/_region-navigation.scss
@@ -1,4 +1,5 @@
 .region-navigation {
+  background: #fff;
   @include box-shadow(0 8px 8px -6px rgba(0,0,0,0.15));
   height: 60px;
   @include breakpoint($mobile-menu-bp 1139px) {
