--- a/public/sites/all/themes/gesso/patternlab/patterns/03-templates-01-innovation-landing/03-templates-01-innovation-landing.mustache
+++ b/public/sites/all/themes/gesso/patternlab/patterns/03-templates-01-innovation-landing/03-templates-01-innovation-landing.mustache
@@ -13,11 +13,7 @@
       &lt;/div&gt;
       &lt;div class=&quot;l-wrapper layout-constrain&quot;&gt;
         &lt;aside class=&quot;l-sidebar&quot;&gt;
-          &lt;div style=&quot;background: #ccc; color: #fff; font-weight: bold; text-align: center;&quot;&gt;
-            FEELTARS&lt;br&gt;
-            GO&lt;br&gt;
-            HERE&lt;br&gt;
-          &lt;/div&gt;
+          {{&gt; molecules-filters }}
         &lt;/aside&gt;
         &lt;div class=&quot;l-main&quot;&gt;
           &lt;div class=&quot;view--card-view&quot;&gt;
