--- a/public/sites/all/themes/gesso/sass/partials/components/pane/_pane--facetapi.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/pane/_pane--facetapi.scss
@@ -41,9 +41,10 @@ div[class*="pane--facetapi"] {
     }
   }
   .pane__content {
+    padding: 0.75em;
     ul {
       list-style: none;
-      margin: 0 0.75em;
+      margin: -0.75em 0;
       padding: 0;
       li {
         border-bottom: 1px solid #f2f2f2;
