--- a/patternlab/source/sass/partials/components/_flag-follow.scss
+++ b/patternlab/source/sass/partials/components/_flag-follow.scss
@@ -1,5 +1,6 @@
 // custom follow button from flag module
-.flag-follow {
+.flag-follow,
+.flag-follow-taxonomy {
   a {
     @extend %button;
     @extend %button--highlight;
