--- a/public/sites/all/themes/gesso/sass/partials/components/pane/_pane--facetapi.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/pane/_pane--facetapi.scss
@@ -1,4 +1,4 @@
-div[class*="pane--facetapi"] {
+div[class*="pane--facetapi-"] {
   background: #fff;
   border: 1px solid #f1f1f1;
   border-top: 0;
