--- a/patternlab/public/patterns/02-organisms-01-content-types-02-innovation/02-organisms-01-content-types-02-innovation.mustache
+++ b/patternlab/public/patterns/02-organisms-01-content-types-02-innovation/02-organisms-01-content-types-02-innovation.mustache
@@ -36,7 +36,7 @@
     &lt;div class=&quot;l-bottom&quot;&gt;
 
       &lt;div class=&quot;pane pane--node&quot;&gt;
-        &lt;h2 class=&quot;pane__title&quot;&gt;About This Innovation&lt;/h2&gt;
+        &lt;h2 class=&quot;pane__title&quot;&gt;About This Innovation&lt;/h2&gt; 
         &lt;div class=&quot;pane__content&quot;&gt;
 
           &lt;div class=&quot;node node--innovation node--full view-mode-full&quot;&gt;
@@ -161,6 +161,7 @@
     &lt;aside class=&quot;l-bottom-sidebar&quot;&gt;
       {{&gt; molecules-innovation-team }}
       {{&gt; molecules-funded-by }}
+      {{&gt; molecules-related-subsectors }}
     &lt;/aside&gt;
   &lt;/div&gt;
 &lt;/div&gt;
