--- a/patternlab/source/_patterns/02-organisms/01-content-types/02-innovation@inprogress.mustache
+++ b/patternlab/source/_patterns/02-organisms/01-content-types/02-innovation@inprogress.mustache
@@ -36,7 +36,7 @@
     <div class="l-bottom">
 
       <div class="pane pane--node">
-        <h2 class="pane__title">About This Innovation</h2>
+        <h2 class="pane__title">About This Innovation</h2> 
         <div class="pane__content">
 
           <div class="node node--innovation node--full view-mode-full">
@@ -161,6 +161,7 @@
     <aside class="l-bottom-sidebar">
       {{> molecules-innovation-team }}
       {{> molecules-funded-by }}
+      {{> molecules-related-subsectors }}
     </aside>
   </div>
 </div>
