Subsectors Changes & Dollar sign for At A Glance

--- a/patternlab/source/_patterns/01-molecules/04-panes/at-a-glance-funding@inprogress.mustache
+++ b/patternlab/source/_patterns/01-molecules/04-panes/at-a-glance-funding@inprogress.mustache
@@ -4,18 +4,18 @@
     <div class="view view--at-a-glance">
       <div class="views-row">      
         <div class="views-field has-icon--favorite">    
-          <span class="views-label views-label-count">Favorites</span>    
+          <span class="views-label">Favorites</span>    
           <span class="field-content">1</span>  
         </div>  
         <div class="views-field has-icon--comment">    
-          <span class="views-label views-label-comment-count">Comments</span>    
+          <span class="views-label">Comments</span>    
           <span class="field-content">2</span>  
         </div>  
-        <div class="views-field">    
-          <span class="views-label">Award Amount:</span>    
-          <span class="field-content">$100,000</span>  
+        <div class="views-field has-icon--amount">    
+          <span class="views-label"></span>    
+          <span class="field__label">$100,000</span>  
         </div>  
       </div>
     </div>
   </div>
-</div>
+</div> 
