--- a/patternlab/source/_patterns/02-organisms/01-content-types/04-funding@inprogress.mustache
+++ b/patternlab/source/_patterns/02-organisms/01-content-types/04-funding@inprogress.mustache
@@ -32,11 +32,7 @@
       </div>
       </div>
       <div class="l-box-third">
-        <div style="background: #ccc; color: #fff; font-weight: bold; text-align: center;">
-        APPLY BUTTONZ<br>
-        GO<br>
-        HERE<br>
-      </div>
+        {{> molecules-how-to-apply-funding }}
       </div>
     </div>
   </div>
