--- a/patternlab/public/patterns/02-organisms-01-content-types-04-funding/02-organisms-01-content-types-04-funding.mustache
+++ b/patternlab/public/patterns/02-organisms-01-content-types-04-funding/02-organisms-01-content-types-04-funding.mustache
@@ -32,11 +32,7 @@
       &lt;/div&gt;
       &lt;/div&gt;
       &lt;div class=&quot;l-box-third&quot;&gt;
-        &lt;div style=&quot;background: #ccc; color: #fff; font-weight: bold; text-align: center;&quot;&gt;
-        APPLY BUTTONZ&lt;br&gt;
-        GO&lt;br&gt;
-        HERE&lt;br&gt;
-      &lt;/div&gt;
+        {{&gt; molecules-how-to-apply-funding }}
       &lt;/div&gt;
     &lt;/div&gt;
   &lt;/div&gt;
