Deadline Calender w/ number only

--- a/patternlab/source/_patterns/02-organisms/01-content-types/04-funding@inprogress.mustache
+++ b/patternlab/source/_patterns/02-organisms/01-content-types/04-funding@inprogress.mustache
@@ -25,11 +25,7 @@
         {{> molecules-at-a-glance-funding }}
       </div>
       <div class="l-box-second">
-        <div style="background: #ccc; color: #fff; font-weight: bold; text-align: center;">
-        DEADLINEZ<br>
-        GO<br>
-        HERE<br>
-      </div>
+        {{> molecules-deadline-funding }}
       </div>
       <div class="l-box-third">
         <div style="background: #ccc; color: #fff; font-weight: bold; text-align: center;">
