--- a/patternlab/public/css/styles.css
+++ b/patternlab/public/css/styles.css
@@ -2126,6 +2126,37 @@ input.throbbing {
   background-color: #03283b;
 }
 
+/* line 1, ../sass/partials/components/_field--funding-deadline.scss */
+.field--funding-deadline {
+  background-image: url(../images/bg/large-blank-event1.png);
+  background-repeat: no-repeat;
+  color: #ed7d3a;
+  float: left;
+  font-size: 32px;
+  height: 73px;
+  line-height: 80px;
+  overflow: hidden;
+  text-align: center;
+  width: 70px;
+}
+
+/* line 14, ../sass/partials/components/_field--funding-deadline.scss */
+.field--funding-deadline__info {
+  float: left;
+  position: relative;
+  right: 0;
+  top: 0;
+}
+/* line 19, ../sass/partials/components/_field--funding-deadline.scss */
+.field--funding-deadline__info p {
+  margin: 0;
+  padding: 0 0 0 25px;
+}
+/* line 23, ../sass/partials/components/_field--funding-deadline.scss */
+.field--funding-deadline__info .field--funding-deadline__time {
+  text-transform: uppercase;
+}
+
 /* line 2, ../sass/partials/components/_field.scss */
 .node--full > .field {
   margin: 0 0 1.625em 0;
@@ -4945,25 +4976,6 @@ tr.drag-previous {
 /* line 24, ../sass/partials/components/view/_view--card-view.scss */
 .view--card-view .views-row.third {
   padding-left: 0.5em;
-}
-
-/* line 1, ../sass/partials/components/view/_view--deadline.scss */
-.date-display-single {
-  background-image: url(../images/bg/large-blank-event1.png);
-  background-repeat: no-repeat;
-  display: block;
-  height: 73px;
-  overflow: hidden;
-  width: 73px;
-}
-/* line 8, ../sass/partials/components/view/_view--deadline.scss */
-.date-display-single .date-display-single__number {
-  color: #ed7d3a;
-  display: block;
-  font-size: 32px;
-  line-height: 73px;
-  padding: 0;
-  text-align: center;
 }
 
 /* line 3, ../sass/partials/components/view/_view--featured-assets.scss */
