--- a/patternlab/source/sass/partials/components/_field--funding-deadline.scss
+++ b/patternlab/source/sass/partials/components/_field--funding-deadline.scss
@@ -1,4 +1,8 @@
 .field--funding-deadline {
+  @extend %clearfix;
+}
+
+.field--funding-deadline__day {
   background-image: url(../images/bg/large-blank-event1.png);
   background-repeat: no-repeat;
   color: $lightorange;
@@ -6,6 +10,7 @@
   font-size: $font-size-xxxl;
   height: 73px;
   line-height: 80px;
+  margin-right: 1em;
   overflow: hidden;
   text-align: center;
   width: 70px;
@@ -13,14 +18,10 @@
 
 .field--funding-deadline__info {
   float: left;
-  position: relative;
-  right: 0;
-  top: 0;
-  p {
-    margin: 0;
-    padding: 0 0 0 25px;
-  }
-  .field--funding-deadline__time {
-    text-transform: uppercase;
-  }
+}
+
+.field--funding-deadline__date {}
+
+.field--funding-deadline__time {
+  text-transform: uppercase;
 }
