updated theme and markup for funding op apply button

--- a/public/sites/all/themes/gesso/patternlab/patterns/02-organisms-01-content-types-04-funding/02-organisms-01-content-types-04-funding.mustache
+++ b/public/sites/all/themes/gesso/patternlab/patterns/02-organisms-01-content-types-04-funding/02-organisms-01-content-types-04-funding.mustache
@@ -25,18 +25,10 @@
         {{&gt; molecules-at-a-glance-funding }}
       &lt;/div&gt;
       &lt;div class=&quot;l-box-second&quot;&gt;
-        &lt;div style=&quot;background: #ccc; color: #fff; font-weight: bold; text-align: center;&quot;&gt;
-        DEADLINEZ&lt;br&gt;
-        GO&lt;br&gt;
-        HERE&lt;br&gt;
-      &lt;/div&gt;
+        {{&gt; molecules-deadline-funding }}
       &lt;/div&gt;
       &lt;div class=&quot;l-box-third&quot;&gt;
-        &lt;div style=&quot;background: #ccc; color: #fff; font-weight: bold; text-align: center;&quot;&gt;
-        APPLY BUTTONZ&lt;br&gt;
-        GO&lt;br&gt;
-        HERE&lt;br&gt;
-      &lt;/div&gt;
+        {{&gt; molecules-how-to-apply-funding }}
       &lt;/div&gt;
     &lt;/div&gt;
   &lt;/div&gt;
