--- a/public/sites/all/themes/gesso/sass/partials/components/view/_view--at-a-glance.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/view/_view--at-a-glance.scss
@@ -21,13 +21,21 @@
   overflow: hidden;
   padding-left: 1.5em;
   .view__attachment-after {
-    .view {
+    .view { 
       clear: both;
       padding-left: 0;
-    }
+    } 
   }
   .views-field {
     clear: both;
+  }
+  .has-icon--amount {
+    @extend %view--at-a-glance__icon-field;
+    &:before {
+      @extend %cardicon;
+      @include image-replace(20px,20px);
+      @include svg-background(icon-funding-20-20-blue);
+    }
   }
   .has-icon--comment {
     @extend %view--at-a-glance__icon-field;
