initial styling for new mobile menu

--- a/patternlab/source/sass/partials/global/variables/_colors.scss
+++ b/patternlab/source/sass/partials/global/variables/_colors.scss
@@ -33,10 +33,9 @@ $form-bg-color: #eee; // Used for fieldsets and vertical-tabs.
 $form-border-color: #ccc;
 
 // Mobile Menu
-$mobile-menu-bg-color: rgba(0, 0, 0, 0.9);
-$mobile-menu-bg-color-fallback: #111;
-$mobile-menu-border-color: #666;
-$mobile-menu-text-color: #eee;
+$mobile-menu-bg-color: #f3f3f3;
+$mobile-menu-border-color: #dadada;
+$mobile-menu-text-color: #555559;
 $mobile-menu-link-color: #37b;
 $mobile-submenu-bg-color: #eee;
 $mobile-submenu-border-color: #ccc;
