--- a/patternlab/source/sass/partials/components/_mobile-menu.scss
+++ b/patternlab/source/sass/partials/components/_mobile-menu.scss
@@ -10,37 +10,20 @@
 }
 
 .mobile-menu__bar {
-  @include background-image(
-    linear-gradient(
-      top,
-      $gradient-light 0%,
-      $gradient-dark 100%
-    )
-  );
-  background-color: $mobile-menu-bg-color-fallback;
   background-color: $mobile-menu-bg-color;
+  border-bottom: 1px solid $mobile-menu-border-color;
+  @include box-shadow(0 0px 2px 1px rgba(0,0,0,0.4));
   color: $mobile-menu-text-color;
   height: 3em;
   padding: 0 0.25em;
-  text-align: right; // LTR
-
-  [dir="rtl"] & {
-    text-align: left;
-  }
+  text-align: center;
 }
 
 .mobile-menu__button {
-  @include background-image(
-    linear-gradient(
-      top,
-      $gradient-light 40%,
-      $gradient-dark 60%
-    )
-  );
-  @include border-radius();
+  @include border-radius(0);
   @include box-shadow(none);
   background-color: transparent;
-  border: 2px solid transparent;
+  border: 0;
   color: $mobile-menu-text-color;
   display: inline-block;
   font-family: $mobile-menu-font-family;
@@ -56,43 +39,59 @@
   &:hover,
   &:active,
   &.is-active {
-    background-color: $mobile-menu-link-color;
-    border-width: 2px;
-    color: $mobile-menu-text-color;
-    outline: 0;
+ 
   }
 
   &:focus {
-    border-color: $mobile-menu-text-color;
+     
   }
 }
+
+.mobile-menu__button--menu {
+  border-right: 1px solid $mobile-menu-border-color;
+  float: left;
+}
+
+
+.mobile-menu__button--home {
+  
+}
+
+
+.mobile-menu__button--search {
+  border-left: 1px solid $mobile-menu-border-color;
+  float: right;
+}
+
 
 .mobile-menu__icon {
   @include image-replace(26px, 22px);
   background-position: 50% 50%;
   background-repeat: no-repeat;
-  background-size: 26px 20px;
+  background-size: 26px 22px;
   display: inline-block;
   margin-top: 0.5em;
-}
-
-.mobile-menu__icon--home {
-  @include svg-background(home);
 }
 
 .mobile-menu__icon--menu {
   @include svg-background(hamburger);
 }
 
+.mobile-menu__icon--home {
+  @include svg-background(mobile-logo);
+  background-size: 149px 30px;
+  height: 30px;
+  width: 149px;
+}
+
 .mobile-menu__icon--search {
   @include svg-background(mobile-search);
-  background-size: 20px 22px;
-  height: 22px;
-  width: 20px;
+  background-size: 18px 20px;
+  height: 20px;
+  width: 18px;
 }
 
 .mobile-menu__links {
-  background-color: $mobile-menu-bg-color-fallback;
   background-color: $mobile-menu-bg-color;
   color: $mobile-menu-text-color;
   padding: 0.5em 0;
