--- a/patternlab/source/sass/partials/components/nav/_nav--mobile-menu.scss
+++ b/patternlab/source/sass/partials/components/nav/_nav--mobile-menu.scss
@@ -2,8 +2,8 @@
 // Styles for the mobile menu.
 
 .nav--mobile-menu {
-  border-bottom: 1px solid $mobile-menu-border-color;
-  border-top: 1px solid $mobile-menu-border-color;
+  //border-bottom: 1px solid $mobile-menu-border-color;
+  //border-top: 1px solid $mobile-menu-border-color;
   margin: 0;
 
   .nav__item {
@@ -11,7 +11,7 @@
     padding: 0;
 
     + .nav__item {
-      border-top: 1px solid $mobile-menu-border-color;
+      //border-top: 1px solid $mobile-menu-border-color;
     }
   }
 
