--- a/patternlab/source/_patterns/02-organisms/01-content-types/community-detail@inprogress.mustache
+++ b/patternlab/source/_patterns/02-organisms/01-content-types/community-detail@inprogress.mustache
@@ -20,7 +20,7 @@
  
   </div>
   
-  <div class="l-wrapper layout-constrain">
+  <div class="l-wrapper layout-constrain"> 
     <div class="l-bottom">
 
       <div class="pane pane--node">
@@ -29,54 +29,44 @@
 
           <div class="view view--highlights">
 
-            <div class="card card__content">
-              <h2 class="card-type">Toolkit</h2>
-              <h3 class="card__primary-title">
+            <div class="card community__content">
+              <h2 class="community__card-type">Innovation</h2>
+              <h3 class="community__primary-title">
                 <a href="#">Making the Journey from Cash to Electronic Payments</a>
               </h3>
-              <div class="card__author">
-                <div class="card__author-date">
-                  <span class="date-display-single">4/2/2015</span>
+              
+                <div class="community__author-image">
+                  <img src="../../images-patternlab/buffy-35-35.jpg">
                 </div>
-                <div class="card__list">
-                  <div class="field__label field__label--inline card__list-label">Sectors:&nbsp;</div>
-                  <a href="#">Agriculture</a>
-                </div> 
-                <div class="card__counts">
-                  <div class="view view-resource-counters">
-                    <div class="has-icon--comment">0</div>
-                  </div>
-                  <div class="view view-resource-counters">
-                    <div class="has-icon--favorite">0</div>
-                  </div>
+
+              <div class="community__author">
+                <div class="community__author-name">Buffy Summers</div>
+                <div class="community__author-date">
+                <span class="date-display-single">4/2/2015</span>
                 </div>
               </div>
             </div>
 
-            <div class="card card__content">
-              <h2 class="card-type">Toolkit</h2>
-              <h3 class="card__primary-title">
-                <a href="#">Making the Journey from Cash to Electronic Payments</a>
+            <div class="card community__content">
+              <h2 class="community__card-type">Publication</h2>
+              <h3 class="community__primary-title">
+                <a href="#">Lorem ipsum dolor sit amet, consectetur adip iscing elit. Viva mustem pus arcu elit.</a>
               </h3>
-              <div class="card__author">
-                <div class="card__author-date">
-                  <span class="date-display-single">4/2/2015</span>
+              
+                <div class="community__author-image">
+                  <img src="../../images-patternlab/buffy-35-35.jpg">
                 </div>
-                <div class="card__list">
-                  <div class="field__label field__label--inline card__list-label">Sectors:&nbsp;</div>
-                  <a href="#">Agriculture</a>
-                </div> 
-                <div class="card__counts">
-                  <div class="view view-resource-counters">
-                    <div class="has-icon--comment">0</div>
-                  </div>
-                  <div class="view view-resource-counters">
-                    <div class="has-icon--favorite">0</div>
-                  </div>
+
+              <div class="community__author">
+                <div class="community__author-name">Buffy Summers</div>
+                <div class="community__author-date">
+                <span class="date-display-single">4/2/2015</span>
                 </div>
               </div>
             </div>
-      
+
+            
+    
           </div>
         </div>
       </div>
