--- a/patternlab/source/sass/partials/components/nav/_block--tb-megamenu-main-menu.scss
+++ b/patternlab/source/sass/partials/components/nav/_block--tb-megamenu-main-menu.scss
@@ -11,14 +11,18 @@
 .block--tb-megamenu-main-menu {
   //layout for main menu wrapper when in navigation region
   .region-navigation & {
-    left: 0;
+    //left: 0;
+    padding-left: 0;
     @include breakpoint(1140px, $no-query: true) {
-      left: 210px;
+      //left: 210px;
+      padding-left: 210px;
     }
-    position: absolute;
-    top: 61px;
+    //position: absolute;
+    //top: 61px;
+    padding-top: 61px;
     @include breakpoint(1140px, $no-query: true) {
-      top: 0;
+      //top: 0;
+      padding-top: 0;
     }
     @media print {
       display: none;
@@ -27,6 +31,7 @@
   .tb-megamenu-main-menu {
     background: none;
     color: $primary-text-color;
+    position: static;
     .tb-megamenu-nav {
       margin: 0;
       padding: 0;
@@ -35,7 +40,7 @@
         margin: 0;
         padding: 0;
         &.dropdown {
-          position: relative;
+          //position: relative;
           > a {
             &:after {
               @include svg-background(chevron-thin-down);
@@ -131,7 +136,7 @@
             border: 1px solid $gray;
           }
           @include box-shadow(0 2px 2px rgba(0,0,0,0.2));
-          padding: 1em;
+          padding: 2em;
           .tb-megamenu-column-inner {
             padding: 0;
           }
@@ -142,6 +147,39 @@
             > .tb-megamenu-item {
               a {
                 border: 0;
+              }
+            }
+          }
+          .row-fluid {
+            border: 0;
+          }
+          .view {
+            @include hyphens(none);
+            .view__header {
+              h2 {
+                border-bottom: 1px solid $border-color;
+                color: $orange;
+                margin: 0 0 0.5em 0;
+                padding: 0 0 0.5em 0;
+              }
+            }
+            .views-row {
+              margin: 0;
+              padding: 0.75em 0 0.75em 0;
+              a {
+                padding: 0;
+                white-space: normal;
+              }
+            }
+            .view__footer {
+              padding: 0.75em 0 0.75em 0;
+              a {
+                color: $link-color;
+                padding: 0;
+                text-decoration: underline;
+                &:hover, &:focus {
+                  color: $link-hover-color;
+                }
               }
             }
           }
