--- a/public/sites/all/themes/gesso/sass/partials/components/nav/_block--tb-megamenu-main-menu.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/nav/_block--tb-megamenu-main-menu.scss
@@ -136,7 +136,7 @@
             border: 1px solid $gray;
           }
           @include box-shadow(0 2px 2px rgba(0,0,0,0.2));
-          padding: 1em;
+          padding: 2em;
           .tb-megamenu-column-inner {
             padding: 0;
           }
@@ -147,6 +147,39 @@
             > .tb-megamenu-item {
               a {
                 border: 0;
+              }
+            }
+          }
+          .row-fluid {
+            border: 0;
+          }
+          .view {
+            @include hyphens(none);
+            .view__header {
+              h2 {
+                border-bottom: 1px solid $border-color;
+                color: $orange;
+                margin: 0 0 0.5em 0;
+                padding: 0 0 0.5em 0;
+              }
+            }
+            .views-row {
+              margin: 0;
+              padding: 0.75em 0 0.75em 0;
+              a {
+                padding: 0;
+                white-space: normal;
+              }
+            }
+            .view__footer {
+              padding: 0.75em 0 0.75em 0;
+              a {
+                color: $link-color;
+                padding: 0;
+                text-decoration: underline;
+                &:hover, &:focus {
+                  color: $link-hover-color;
+                }
               }
             }
           }
