added title text to icons in PatternLab

--- a/patternlab/public/patterns/02-organisms-02-view-modes-03-organization-teaser/02-organisms-02-view-modes-03-organization-teaser.mustache
+++ b/patternlab/public/patterns/02-organisms-02-view-modes-03-organization-teaser/02-organisms-02-view-modes-03-organization-teaser.mustache
@@ -7,13 +7,13 @@
     &lt;div&gt;{{{ summary }}}&lt;/div&gt;
     &lt;div class=&quot;card__counts&quot;&gt;
       &lt;div class=&quot;view&quot;&gt;
-        &lt;div class=&quot;has-icon--innovation&quot;&gt;12&lt;/div&gt;
+        &lt;div class=&quot;has-icon--innovation&quot; title=&quot;Innovations&quot;&gt;12&lt;/div&gt;
       &lt;/div&gt;
       &lt;div class=&quot;view&quot;&gt;
-        &lt;div class=&quot;has-icon--member&quot;&gt;5&lt;/div&gt;
+        &lt;div class=&quot;has-icon--member&quot; title=&quot;Members&quot;&gt;5&lt;/div&gt;
       &lt;/div&gt;
       &lt;div class=&quot;view&quot;&gt;
-        &lt;div class=&quot;has-icon--favorite&quot;&gt;6&lt;/div&gt;
+        &lt;div class=&quot;has-icon--favorite&quot; title=&quot;Favorites&quot;&gt;6&lt;/div&gt;
       &lt;/div&gt;
     &lt;/div&gt;
   &lt;/div&gt;
