--- a/patternlab/source/_patterns/01-molecules/04-panes/at-a-glance-innovation@inprogress.mustache
+++ b/patternlab/source/_patterns/01-molecules/04-panes/at-a-glance-innovation@inprogress.mustache
@@ -3,15 +3,15 @@
   <div class="pane__content">
     <div class="view view--at-a-glance">
       <div class="views-row">      
-        <div class="views-field has-icon--comment">    
+        <div class="views-field has-icon--comment" title="Comments">    
           <span class="views-label">Comments</span>    
           <span>2</span>  
         </div>  
-        <div class="views-field has-icon--favorite">    
+        <div class="views-field has-icon--favorite" title="Favorites">    
           <span class="views-label">Favorites</span>    
           <span>1</span>  
         </div>  
-        <div class="views-field has-icon--member">    
+        <div class="views-field has-icon--member" title="Evidence">    
           <span class="views-label">Evidence</span>    
           <span>0</span>  
         </div>  
