--- a/patternlab/source/_patterns/02-organisms/02-view-modes/01-innovation-teaser@inprogress.mustache
+++ b/patternlab/source/_patterns/02-organisms/02-view-modes/01-innovation-teaser@inprogress.mustache
@@ -7,16 +7,16 @@
     <div>{{{ summary }}}</div>
     <div class="card__counts">
       <div class="view">
-        <div class="has-icon--evidence">0</div>
+        <div class="has-icon--evidence" title="Evidence">0</div>
       </div>
       <div class="view">
-        <div class="has-icon--comment">12</div>
+        <div class="has-icon--comment" title="Comments">12</div>
       </div>
       <div class="view">
-        <div class="has-icon--organization">5</div>
+        <div class="has-icon--organization" title="Organizations">5</div>
       </div>
       <div class="view">
-        <div class="has-icon--favorite">6</div>
+        <div class="has-icon--favorite" title="Favorites">6</div>
       </div>
     </div>
   </div>
