--- a/patternlab/source/_patterns/02-organisms/02-view-modes/03-organization-teaser@inprogress.mustache
+++ b/patternlab/source/_patterns/02-organisms/02-view-modes/03-organization-teaser@inprogress.mustache
@@ -7,13 +7,13 @@
     <div>{{{ summary }}}</div>
     <div class="card__counts">
       <div class="view">
-        <div class="has-icon--innovation">12</div>
+        <div class="has-icon--innovation" title="Innovations">12</div>
       </div>
       <div class="view">
-        <div class="has-icon--member">5</div>
+        <div class="has-icon--member" title="Members">5</div>
       </div>
       <div class="view">
-        <div class="has-icon--favorite">6</div>
+        <div class="has-icon--favorite" title="Favorites">6</div>
       </div>
     </div>
   </div>
