--- a/public/sites/all/themes/gesso/patternlab/patterns/02-organisms-02-view-modes-01-innovation-teaser/02-organisms-02-view-modes-01-innovation-teaser.mustache
+++ b/public/sites/all/themes/gesso/patternlab/patterns/02-organisms-02-view-modes-01-innovation-teaser/02-organisms-02-view-modes-01-innovation-teaser.mustache
@@ -7,16 +7,16 @@
     &lt;div&gt;{{{ summary }}}&lt;/div&gt;
     &lt;div class=&quot;card__counts&quot;&gt;
       &lt;div class=&quot;view&quot;&gt;
-        &lt;div class=&quot;has-icon--evidence&quot;&gt;0&lt;/div&gt;
+        &lt;div class=&quot;has-icon--evidence&quot; title=&quot;Evidence&quot;&gt;0&lt;/div&gt;
       &lt;/div&gt;
       &lt;div class=&quot;view&quot;&gt;
-        &lt;div class=&quot;has-icon--comment&quot;&gt;12&lt;/div&gt;
+        &lt;div class=&quot;has-icon--comment&quot; title=&quot;Comments&quot;&gt;12&lt;/div&gt;
       &lt;/div&gt;
       &lt;div class=&quot;view&quot;&gt;
-        &lt;div class=&quot;has-icon--organization&quot;&gt;5&lt;/div&gt;
+        &lt;div class=&quot;has-icon--organization&quot; title=&quot;Organizations&quot;&gt;5&lt;/div&gt;
       &lt;/div&gt;
       &lt;div class=&quot;view&quot;&gt;
-        &lt;div class=&quot;has-icon--favorite&quot;&gt;6&lt;/div&gt;
+        &lt;div class=&quot;has-icon--favorite&quot; title=&quot;Favorites&quot;&gt;6&lt;/div&gt;
       &lt;/div&gt;
     &lt;/div&gt;
   &lt;/div&gt;
