hid and tweaks styles on content submission screens

--- a/patternlab/source/sass/partials/base/_html-elements.scss
+++ b/patternlab/source/sass/partials/base/_html-elements.scss
@@ -308,13 +308,17 @@ table {}
 
 tbody {}
 
-td {}
+td {
+  vertical-align: top;
+}
 
 textarea {}
 
 tfoot {}
 
-th {}
+th {
+  vertical-align: top;
+}
 
 thead {}
 
