--- a/public/sites/all/themes/gesso/sass/partials/base/_html-elements.scss
+++ b/public/sites/all/themes/gesso/sass/partials/base/_html-elements.scss
@@ -308,13 +308,17 @@ table {}
 
 tbody {}
 
-td {}
+td {
+  vertical-align: top;
+}
 
 textarea {}
 
 tfoot {}
 
-th {}
+th {
+  vertical-align: top;
+}
 
 thead {}
 
